Fix link styles on /government/get-involved
- removes the underline from the number but retains it on the context text beneath
- the underline seems to scale to the font size, so keeping it on the number would have meant a huge underline that overlapped the context

--- a/app/assets/stylesheets/frontend/views/_get-involved.scss
+++ b/app/assets/stylesheets/frontend/views/_get-involved.scss
@@ -51,7 +51,6 @@
     }
 
     .count {
-
       @include govuk-media-query($from: desktop) {
         width: $half;
       }
@@ -67,6 +66,20 @@
         @include core-16;
         margin-top: 0;
         color: govuk-colour("black");
+        @include govuk-link-common;
+      }
+
+      &:hover {
+        .context {
+          text-underline-offset: .1em;
+          @include govuk-link-hover-decoration;
+        }
+      }
+
+      &:focus {
+        .context {
+          text-decoration: none;
+        }
       }
     }
 
